[tool.poetry]
name = "directory-authority-proxy"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = {extras = ["standard"], version = "0.115.6"}
uvicorn = "0.34.0"
httpx = "0.28.1"
stem = "1.8.2"
cryptography = "41.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
